# Archivo: contract/Cargo.toml

[package]
name = "sustencoins_contract"
version = "0.0.1"
edition = "2021"
description = "Contrato inteligente Soroban para tokenizar experiencias de turismo sostenible (SUSC)"
license = "MIT"

[lib]
# Tipo de biblioteca, obligatorio para contratos Soroban
crate-type = ["cdylib"]

[dependencies]
# Dependencias principales de Soroban y Rust
soroban-sdk = "20.2.0" # Versión actual de Soroban SDK
soroban-token-sdk = "20.2.0" # Para usar el estándar de token (SEP-41)

[features]
# Característica estándar para pruebas
testutils = ["soroban-sdk/testutils"]

# Usar esta característica para la compilación final a WebAssembly
# Requiere 'rust-toolchain' y 'soroban-cli' configurados
[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
panic = "abort"
# Las configuraciones anteriores son específicas para optimizar el tamaño del WASM del contrato